--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "test": "web-test-runner \"src/**/*.test.tsx\"",
-    "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx}\""
+    "test": "web-test-runner \"src/**/*.test.tsx\""
   },
   "dependencies": {
     "preact": "^10.5.4"
