--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,11 +8,16 @@
   },
   "dependencies": {
     "@graphql-modules/core": "^0.7.17",
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0"
+    "express-graphql": "^0.12.0",
+    "express-winston": "^4.0.5",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
+    "@types/express-winston": "^4.0.0",
     "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.8.0"
   }
