--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
-    "format": "prettier '**/*.{ts,tsx,json,graphql}' --write",
-    "server": "cd packages/server && yarn"
+    "start": "cd packages/client && yarn start",
+    "format": "prettier '**/*.{ts,tsx,json,graphql}' --write"
   }
 }
