--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,9 +13,13 @@
   "devDependencies": {
     "@prefresh/snowpack": "^2.0.1",
     "@snowpack/plugin-dotenv": "^2.0.4",
+    "@snowpack/plugin-run-script": "^2.2.1",
     "@snowpack/plugin-typescript": "^1.1.0",
     "@snowpack/web-test-runner-plugin": "^0.1.4",
     "@testing-library/preact": "^2.0.0",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.0.4",
+    "chai": "^4.2.0",
     "prettier": "^2.0.5",
     "snowpack": "^2.17.1",
     "typescript": "^4.0.3"
