--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
-    "start": "cd packages/client && yarn start",
-    "test": "yarn run test:server && yarn run test:client",
-    "test:client": "cd packages/client && yarn test",
-    "test:server": "cd packages/server && yarn test",
+    "client": "cd packages/client && yarn",
+    "server": "cd packages/server && yarn",
+    "start": "yarn client start",
+    "test": "yarn server test && yarn client test",
     "format": "prettier '**/*.{ts,tsx,json,graphql}' --write"
   }
 }
